# TyumenCTF-2025-Writeups

./: README.md
forensic/272+273=8/task/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
forensic/272+273=8/task/assets/: kek.docm
forensic/272+273=8/task/src/: main.rs
joy/Kaboom!/task/: Cargo.toml  Dockerfile  docker-compose.yml
joy/Kaboom!/task/public/: index.html  kaboom.webm  script.js  style.css
joy/Kaboom!/task/src/: main.rs
joy/Kaboom!/task/src/static_service/: debug.rs  release.rs
joy/Kaboom!/task/writeup/: solve.js
web/Объект 314/src/: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.dev.yml  docker-compose.yml  pax_global_header
web/Объект 314/src/.sqlx/: query-07561bcfa0150240b03ebb04160bd3d53ad887628033f6ebd32950d0cb2b4869.json  query-3e9202fcc1c63543f7873151bdef0b9f9016f4aa7fc3275681c76cf80e2470c1.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json
web/Объект 314/src/frontend/: package.json
web/Объект 314/src/frontend/assets/: heading-bg.xcf
web/Объект 314/src/frontend/src/: App.tsx  api.ts  index.html  index.tsx
web/Объект 314/src/frontend/src/components/: AccountPanel.tsx
web/Объект 314/src/frontend/src/context/: user.ts
web/Объект 314/src/frontend/src/layout/: Banners.tsx  Footer.tsx  Header.tsx  Layout.tsx  Navigation.tsx
web/Объект 314/src/frontend/src/pages/: Index.tsx  Login.tsx  (+2 more)
web/Объект 314/src/mainframe/: Dockerfile  database.sql
web/Объект 314/src/mainframe/blackshift/: memo_017.md  note_internal_use_03.txt
web/Объект 314/src/migrations/: 20250413110334_create_user.up.sql  20250418204458_insert_admin.up.sql
web/Объект 314/src/src/: config.rs  main.rs
web/Объект 314/src/src/extractors/: auth.rs
web/Объект 314/src/src/models/: user.rs
web/Объект 314/src/src/proxy/: debug.rs  release.rs
web/Объект 314/src/src/repos/: user.rs
web/Объект 314/src/src/security/: crypto.rs  jwt.rs  mod.rs  totp.rs
web/Объект 314/src/src/views/: classified.rs  mod.rs  user.rs
(+106 files in other folders)
