[package]
name = "homework"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.10.2"
anyhow = "1.0.97"
flexi_logger = "0.30.1"
futures = { version = "0.3.31", default-features = false, features = ["alloc", "async-await", "std"] }
log = "0.4.27"
maud = "0.27.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
