[package]
name = "kaboom"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-embed = "0.1.0"
actix-files = "0.6.6"
actix-web = "4.10.2"
actix-ws = "0.3.0"
defer = "0.2.1"
flexi_logger = "0.30.1"
futures = { version = "0.3.31", default-features = false, features = ["alloc", "async-await", "std"] }
log = "0.4.27"
morse-codec = "0.4.11"
rust-embed = "6.*"
tokio = { version = "1.44.1", features = ["full"] }
